--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -14,7 +14,11 @@ es:
     new_category: Nueva Categoría
   category: Categoría
   common:
+    are_you_sure: ¿Está seguro?
     back: Atrás
+    destroy: Eliminar
+    edit: Editar
+    show: Mostrar
   description: Descripción
   due_date: Fecha término
   hello: Hello world
