--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,7 +14,11 @@ en:
     new_category: Nueva Categoría
   category: Category
   common:
+    are_you_sure: Are you sure
     back: Atrás
+    destroy: Destroy
+    edit: Edit
+    show: Show
   description: Description
   due_date: Due date
   hello: Hello world
